update icons on change folder color modal

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -224,16 +224,8 @@
                 position: absolute;
                 font-size: 50px;
             }
-            .cptools-folder-no-color {
+            .folder-no-color {
                 color: @cryptpad_color_grey_500;
-            }
-            .fa-check {
-                position: absolute;
-                top: 40%; left: 35%;
-                color: transparent;
-            }
-            &.cp-app-drive-current-color > .fa-check {
-                color: @cryptpad_color_grey_900;
             }
         }
     }
