update icons on drive and profile

--- a/www/support/app-support.less
+++ b/www/support/app-support.less
@@ -25,7 +25,7 @@
     flex-flow: column;
 
     .cp-support-form-attachments {
-        .fa {
+        svg {
             cursor: pointer;
         }
         &> span {
