update custom icons

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -50,6 +50,10 @@
             flex-flow: column;
             border-radius: @variables_radius;
             box-shadow: @cryptpad_ui_shadow;
+
+            svg {
+                margin: 0;
+            }
         }
         color: @cp_kanban-fg;
         button {
