update icon style

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -834,6 +834,11 @@
                 color: var(--toolbar-bg-color);
                 border-radius: @variables_radius;
 
+                svg {
+                    height: 3rem;
+                    width: 3rem;
+                    margin: 0;
+                }
                 span {
                     font-size: 45px;
                 }
