--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -117,14 +117,14 @@
                     }
                 }
             }
-            i.cp-badge {
+            span.cp-badge {
                 color: var(--msg-bg-color-dark);
                 border-color: var(--msg-bg-color-dark);
             }
             &:hover {
                 background-color: @msg-bg-color-darker;
                 background-color: var(--msg-bg-color-darker);
-                i.cp-badge {
+                span.cp-badge {
                     color: var(--msg-bg-color-darker);
                     border-color: var(--msg-bg-color-darker);
                 }
@@ -247,7 +247,7 @@
         .cp-app-contacts-header {
             background-color: @msg-bg-color-lighter;
             background-color: var(--msg-bg-color-lighter);
-            i.cp-badge {
+            span.cp-badge {
                 color: var(--msg-bg-color-lighter);
                 border-color: var(--msg-bg-color-lighter);
             }
