--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -222,7 +222,7 @@
                 border-radius: @variables_radius;
                 border-right: 3px solid transparent;
                 .avatar_main(35px);
-                i.cp-badge {
+                span.cp-badge {
                     color: @cp_toolbar-bg2;
                     border-color: @cp_toolbar-bg2;
                 }
@@ -230,7 +230,7 @@
                     cursor: pointer;
                     &:hover {
                         background: @cp_toolbar-bg3;
-                        i.cp-badge {
+                        span.cp-badge {
                             color: @cp_toolbar-bg3;
                             border-color: @cp_toolbar-bg3;
                         }
@@ -282,10 +282,10 @@
                         padding: 0;
                     }
                     .cp-userlist-badge {
-                        i {
+                        span {
                             color: @cryptpad_color_brand;
                         }
-                        i.cp-badge-error {
+                        span.cp-badge-error {
                             color: @cryptpad_color_warn_red;
                         }
                     }
