--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -59,7 +59,7 @@
             border-radius: 4px;
             overflow: visible;
             position: relative;
-            i.cp-badge {
+            span.cp-badge {
                 border-width: 3px;
             }
             .cp-app-profile-avatar-delete {
