fix margin issues for password buttons

--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -132,6 +132,7 @@
                     margin-left: 10px;
                 }
                 .cp-password-reveal {
+                    margin-left: 0.5rem;
                     border-radius:@variables_radius;
                 }
             }
