edit icons style

--- a/customize.dist/src/less2/include/icons.less
+++ b/customize.dist/src/less2/include/icons.less
@@ -36,9 +36,9 @@
             color: @cp_drive-fg;
             outline: @cryptpad_color_brand solid 2px;
         }
-        .fa, .cptools {
-            display: block;
-            font-size: 64px;
+        svg {
+            height: 4rem;
+            width: 4rem;
             margin: 18px 0;
             text-align: center;
             &.listonly {
