--- a/www/secureiframe/app-secure.less
+++ b/www/secureiframe/app-secure.less
@@ -93,13 +93,10 @@
                     margin-top: 5px;
                     max-width: 100%;
                 }
-                .fa, .cptools {
+                svg {
                     cursor: pointer;
-                    width: 100px;
-                    height: 100px;
-                    font-size: 70px;
-                    text-align: center;
-                    line-height: 100px;
+                    width: 4rem;
+                    height: 4rem;
                 }
             }
         }
