update messenger icons

--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -62,12 +62,12 @@
         }
     }
 
-    span.cp-app-contacts-spinner {
+    .cp-app-contacts-spinner {
         display: none;
     }
 
     .cp-app-contacts-initializing {
-        span.cp-app-contacts-spinner {
+        svg.cp-app-contacts-spinner {
             color: @cp_messenger-fg;
             display: block;
         }
@@ -174,9 +174,6 @@
                 margin: 10px;
                 display: none;
                 order: 3;
-                .fa-bell-slash {
-                    margin-right: 10px;
-                }
             }
         }
     }
