update form icons

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -465,7 +465,7 @@
                     margin-bottom: 20px;
                     button {
                         width: 50px;
-                        i {
+                        svg {
                             margin-right: 0;
                         }
                     }
@@ -498,7 +498,7 @@
                             button {
                                 border: 0px;
                                 //padding-bottom: 3px;
-                                i {
+                                svg {
                                     font-size: 35px;
                                     line-height: 35px;
                                 }
@@ -632,9 +632,8 @@
                         display: flex;
                         height: 38px;
                         align-items: center;
-                        i {
+                        svg {
                             margin-right: 0;
-                            font-size: 25px;
                         }
                     }
                 }
@@ -675,7 +674,7 @@
                         padding-left: 10px;
                         font-size: 20px;
                         color: @cp_sidebar-hint;
-                        i {
+                        svg {
                             cursor: grab;
                             &:first-child {
                                 height: 3px;
@@ -742,7 +741,7 @@
                             font-size: 20px;
                             text-align: center;
                             padding: 10px;
-                            i {
+                            svg {
                                 margin-right: 5px;
                             }
                         }
@@ -1077,7 +1076,7 @@
             //margin-top: -10px;
             //margin-right: -10px;
             border-radius: 0px @variables_radius 0px 0px;
-            i { margin-right: 5px; }
+            svg { margin-right: 5px; }
             background: fade(@cryptpad_text_col, 10%);
         }
     }
@@ -1410,7 +1409,7 @@
                 font-size: 20px;
                 line-height: 40px;
                 margin-top: -12px;
-                i {
+                svg {
                     margin-right: 5px;
                 }
             }
