update upload and download icons

--- a/customize.dist/src/less2/include/fileupload.less
+++ b/customize.dist/src/less2/include/fileupload.less
@@ -49,6 +49,10 @@
                 &:hover {
                     color: lighten(@cp_upload-fg, 10%);
                 }
+                svg {
+                    margin: 0;
+                }
+
             }
         }
         #cp-fileupload-table {
