update icons creation page

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -122,10 +122,13 @@
                 position: relative;
                 a {
                     position: absolute;
-                    top: 7px;
-                    margin-left: 30px;
+                    margin-left: 1em;
                     font-size: 16px;
                     color: inherit;
+
+                    svg {
+                        margin: 0;
+                    }
                 }
                 a:focus-visible {
                     border-radius: 50%;
@@ -195,6 +198,9 @@
                 color: @cp_creation-fg;
                 &:hover {
                     text-decoration: none;
+                }
+                svg {
+                    margin: 0;
                 }
             }
             .cp-creation-slider {
@@ -343,7 +349,6 @@
                 flex-wrap: nowrap;
                 justify-content: space-between;
                 .cp-creation-template-more {
-                    font-size: 30px;
                     margin: 0 5px;
                     text-align: center;
                     background-color: transparent;
@@ -365,6 +370,11 @@
                     &:focus-visible {
                         outline: @variables_focus_style;
                         border-radius: @variables_radius;
+                    }
+                    svg {
+                        margin: 0;
+                        height: 1.5rem;
+                        width: 1.5rem;
                     }
                 }
             }
@@ -399,7 +409,7 @@
                     &.cp-creation-template-selected, &:hover {
                         background-color: @creation-bg-color-light;
                         background-color: var(--creation-bg-color-light);
-                        .fa, .cptools {
+                        svg {
                             color: @creation-color;
                             color: var(--creation-color);
                         }
@@ -430,11 +440,12 @@
                         line-height: 25px;
                         max-width: 100%;
                     }
-                    .fa, .cptools {
+                    svg {
                         color: @creation-bg-color;
                         color: var(--creation-bg-color);
                         cursor: pointer;
-                        font-size: 30px;
+                        height: 1.8rem;
+                        width: 1.8rem;
                         text-align: center;
                         margin-right: 10px;
                     }
