--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -38,12 +38,6 @@
 
 
         .tui-full-calendar-confirm {
-            span, i {
-                padding: 0 0.5rem;
-            }
-            span {
-                padding-left: 0;
-            }
             width: unset;
         }
 
@@ -171,7 +165,7 @@
             color: @cryptpad_text_col;
             border-radius: @variables_radius_L;
             font-weight: normal;
-            .tui-full-calendar-icon:not(.tui-full-calendar-calendar-dot):not(.tui-full-calendar-dropdown-arrow):not(.tui-full-calendar-ic-checkbox):not(.fa-map-marker):not(.fa-align-justify):not(svg) {
+            .tui-full-calendar-icon:not(.tui-full-calendar-calendar-dot):not(.tui-full-calendar-dropdown-arrow):not(.tui-full-calendar-ic-checkbox):not(svg) {
                 display: none;
             }
             .tui-full-calendar-icon {
@@ -186,13 +180,11 @@
                     display: flex;
                     align-items: center;
                 }
-                .fa-align-justify {
-                    margin-top: 3px;
-                }
                 &.tui-full-calendar-popup-detail-item-separate {
                     &>span {
                         display: flex;
                         width: 100%;
+                        align-items: center;
                     }
                     .event-description {
                         display: block;
@@ -224,7 +216,8 @@
             .tui-full-calendar-section-button-save {
                 height: 40px;
                 .btn-primary { // Update button
-                    margin-right: 0px;
+                    margin-right: 0;
+                    display: flex;
                 }
             }
 
@@ -345,6 +338,8 @@
                 button {
                     flex: 1;
                     margin: 0;
+                    display: inline-flex;
+                    justify-content: center;
                 }
             }
             .tui-full-calendar-popup-top-line {
@@ -360,13 +355,13 @@
         .cp-recurrence-label, .cp-notif-label {
             color: @cryptpad_text_col;
             margin-right: 1rem;
-            i {
-                margin-right: 0.5rem;
-            }
+            display: inline-flex;
+            align-items: center;
         }
 
         .cp-calendar-recurrence-container {
             margin-top: 1rem;
+            display: inline-flex;
             .cp-calendar-rec-translated-str {
                 margin-top: 0.5rem;
             }
@@ -382,6 +377,7 @@
             }
             & > div {
                 display: flex;
+                align-items: self-start;
             }
             .cp-calendar-notif-list-container {
                 width: 100%;
@@ -721,9 +717,6 @@
                         &:focus-visible {
                             outline: @variables_focus_style;
                         }
-                        i {
-                            margin-left: 5px;
-                        }
                     }
                 }
                 &:not(:last-child) {
@@ -786,11 +779,9 @@
         .cp-calendar-notif-list-container, .cp-calendar-notif-form {
             flex-direction: column;
             align-items: unset !important;
+            gap: 1rem;
         }
         .cp-calendar-newevent {
-            i {
-                margin: 0 !important;
-            }
             span {
                 display: none;
             }
