First version of fix with timeout

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -56,7 +56,9 @@
             padding-top: 5px;
             padding-bottom: 5px;
             border: 1px solid transparent;
-
+            svg.cp-app-drive-element-icon {
+                font-size: 2rem;
+            }
             &:not(.cp-app-drive-element-selected):not(.cp-app-drive-element-selected-tmp) {
                 border: 1px solid @cp_drive-icon-border;
             }
