update access and share modal style

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -67,6 +67,11 @@
         outline: none;
         font: @colortheme_app-font;
 
+        .lucide {
+            width: 1.2em;
+            height: 1.2em;
+            margin-right: 0.2rem;
+        }
         .cp-checkmark {
             color: @cryptpad_text_col;
         }
@@ -511,7 +516,6 @@
                     margin-bottom: @alertify_padding-base;
                 }
                 button {
-                    width: 50px;
                     margin: 0;
                     min-width: 0;
                     font-size: 18px !important;
