--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -150,6 +150,7 @@
     button.btn {
         background-color: @cp_buttons-cancel;
         box-sizing: border-box;
+        display: inline-flex;
         align-items: center;
         line-height: 20px;
         padding: 8px 6px;
