--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -609,6 +609,12 @@
                         line-height: 32px;
                         margin: 0;
                     }
+                    .cp-toolbar-notifications {
+                        svg {
+                            height:1.5rem;
+                            width:1.5rem;
+                        }
+                    }
                 }
             }
         }
