render icons on forms

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -903,7 +903,7 @@
                             border-right: 0px;
                         }
                         button {
-                            i { margin: 0 !important; }
+                            svg { margin: 0 !important; }
                         }
 
                     }
