Make splitter svg larger

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -533,7 +533,7 @@
             }
             svg {
                 color: @cryptpad_text_col;
-                margin:0;
+                transform: scale(2.5);
             }
         }
         &.cp-app-drive-readonly { // applied to offline drive (not read-only shared folders)
