update icon size

--- a/customize.dist/src/less2/include/admin.less
+++ b/customize.dist/src/less2/include/admin.less
@@ -57,8 +57,9 @@
             &:hover {
                 cursor: pointer;
             }
-            i.cp-icon {
-                font-size: 2.8rem;
+            .cp-icon {
+                height: 2.8rem;
+                width: 2.8rem;
             }
             .cp-app-name {
                 flex-grow: 1;
