update icon size + alignment

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -300,7 +300,16 @@
 
     #cp-app-toolbar-creation-dialog.cp-modal-container {
         .icons_main();
+        h3 {
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
 
+            svg {
+                height: 2rem;
+                width: 2rem;
+            }
+        }
         li {
             color: @cp_drive-fg;
             border: 1px solid @cp_drive-icon-border;
