--- a/www/secureiframe/app-secure.less
+++ b/www/secureiframe/app-secure.less
@@ -32,12 +32,17 @@
 
     #cp-filepicker-dialog {
         display: none;
+        .lucide {
+            height:1.2rem;
+            width: 1.2rem;
+            margin-right: 0.2rem;
+        }
         .cp-modal {
             border-radius: @variables_radius_L;
             .cp-filepicker-content {
                 display: flex;
                 flex-wrap: wrap;
-                justify-content: flex-start;
+                justify-content: center;
                 overflow-y: auto;
             }
 
@@ -59,6 +64,7 @@
                 border-radius: @variables_radius;
 
                 display: inline-flex;
+                justify-content: center;
                 flex-flow: column;
 
                 box-sizing: content-box;
@@ -97,6 +103,7 @@
                     cursor: pointer;
                     width: 4rem;
                     height: 4rem;
+                    margin: 0;
                 }
             }
         }
