update drive tree icons

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -401,23 +401,8 @@
         .cp-limit-container {
             margin-top: 5px;
         }
-        .fa.cp-app-drive-icon-expcol {
-            margin-left: -10px;
-            font-size: 14px;
-            position: absolute;
-            left: -17px;
-            top: 11px;
-            width: 11px !important;
-            height: 11px !important;
-            background-color: @cp_sidebar-left-item-bg;
-            padding: 0;
-            margin: 0;
-            z-index: 10;
-            cursor: default;
-            &:before {
-                position: relative;
-                top: -1px;
-            }
+        .cp-app-drive-icon-expcol {
+            display: inline-flex;
             &:focus-visible {
                 outline: @variables_focus_style;
                 border-radius: @variables_radius_S;
