align drive files icons

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -747,6 +747,7 @@
             }
             li {
                 display: flex;
+                align-items: center;
                 border-radius: @variables_radius;
                 input {
                     border: 1px solid transparent;
