--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -1403,6 +1403,8 @@
             width: 500px;
             padding: 24px;
             h2 {
+                display: inline-flex;
+                align-items: center;
                 font-size: 20px;
                 line-height: 40px;
                 margin-top: -12px;
