Update check icon + handling logic

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -83,6 +83,9 @@
         width: ~"calc(100% - 5rem)";
         padding-left: 0.5rem;
         vertical-align: middle;
+        .is-hidden {
+            display: none;
+        }
     }
 
     .cp-admin-color-preview {
