--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -99,6 +99,16 @@
     &.cp-form-palette-nocolor {
         background-color: @cp_app-bg !important;
     }
+    .cp-form-color-container {
+        span.cp-form-palette {
+            svg.lucide {
+                margin: 0.2rem;
+            }
+        }
+        .is-hidden {
+            display: none;
+        }
+    }
 
     div.alert.cp-burn-after-reading {
         margin: 10px !important;
