--- a/www/install/onboarding.less
+++ b/www/install/onboarding.less
@@ -109,6 +109,9 @@
                 justify-content: flex-start;
                 .cp-palette-color {
                     margin-right: 1rem;
+                    .is-hidden {
+                        display: none;
+                    }
                 }
             }
         }
