--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -137,7 +137,7 @@
             line-height: 30px;
             color: @cp_kanban-fg;
             border: 1px solid fade(@cp_kanban-fg, 40%);
-            &.fa-check { // tick on selected color
+            &.svg { // tick on selected color
                 color: @cryptpad_text_col;
             }
             outline: none;
