fix drive search icon rendering

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -608,6 +608,10 @@
                         line-height: 16px;
                         color: @cp_drive-header-fg;
                     }
+                    .cp-icon {
+                        height: 1.5rem;
+                        width: 1.5rem;
+                    }
                 }
                 &.cp-app-drive-tags-list {
                     width: 100%;
