--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -271,9 +271,14 @@
     .cp-app-drive-search-spinner {
         display: inline-flex;
         color: @cp_drive-fg;
-        font-size: 40px;
         align-items: center;
         justify-content: center;
+        animation: spin 10s linear infinite;
+        svg {
+            height: 2rem;
+            width: 2rem;
+            margin: 0;
+        }
     }
     .cp-app-drive-search-noresult {
         font-size: 30px;
