--- a/customize.dist/src/less2/include/contextmenu.less
+++ b/customize.dist/src/less2/include/contextmenu.less
@@ -26,6 +26,10 @@
         .dropdown-menu {
             padding: 6px 0px;
         }
+        .dropdown-item {
+            display: inline-flex;
+            align-items: center;
+        }
         li {
             padding: 0;
             font-size: @colortheme_app-font-size;
