--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -96,6 +96,8 @@
 
         h1, h2, h3 {
             margin-top: 0;
+            display: flex;
+            align-items: center;
         }
 
         &.hide {
