Fix file icon transforming with title size for files in drive

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -57,7 +57,9 @@
             padding-bottom: 5px;
             border: 1px solid transparent;
             svg.cp-app-drive-element-icon {
-                font-size: 2rem;
+                min-width: 1.25em;
+                min-height: 1.25em;
+                font-size: 1em;
             }
             &:not(.cp-app-drive-element-selected):not(.cp-app-drive-element-selected-tmp) {
                 border: 1px solid @cp_drive-icon-border;
