Fix file menu icons sizing and remove fa/cptools styling

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -435,6 +435,11 @@
                 margin: 0;
                 background: transparent;
             }
+            svg {
+                height: 1em;
+                width: 1em;
+                margin-right: 0.5rem;
+            }
         }
 
         button {
