--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -436,9 +436,9 @@
                 background: transparent;
             }
             svg {
-                height: 1em;
-                width: 1em;
-                margin-right: 0.5rem;
+                height: 1.125em;
+                width: 1.125em;
+                margin-right: 0.5em;
             }
         }
 
