add margin variable

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -30,7 +30,7 @@
     .lucide {
         width: 1.2em;
         height: 1.2em;
-        margin-right: 0.2rem;
+        margin-right: @variables_icon_margin;
     }
     .cp-unselectable {
         .tools_unselectable();
