--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -54,7 +54,7 @@ body.html {
     .lucide {
         width: 1.2em;
         height: 1.2em;
-        margin-right: 0.2rem;
+        margin-right: @variables_icon_margin;
     }
     border: 0;
     padding: 0;
