--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -14,7 +14,7 @@
     .lucide {
         width: 1.2rem;
         height: 1.2rem;
-        margin-right: 0.2rem;
+        margin-right: @variables_icon_margin;
     }
     @notif-height: 50px;
     .cp-notifications-container {
