--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -438,7 +438,7 @@
             svg {
                 height: 1.125em;
                 width: 1.125em;
-                margin-right: 0.5em;
+                margin-right: @variables_icon_margin;
             }
         }
 
