--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -91,7 +91,7 @@
             margin-top: 20px;
             svg {
                 font-size: 1.2em;
-                margin-right: 5px;
+                margin-right: @variables_icon_margin;
             }
         }
         .cp-instance-links {
