--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -677,7 +677,7 @@
                     position: initial;
                     .cp-dropdown-content{
                         svg {
-                            margin-right: 0.2rem;
+                            margin-right: @variables_icon_margin;
                         }
                         @media screen and (max-width: 600px)
                         {
