--- a/www/secureiframe/app-secure.less
+++ b/www/secureiframe/app-secure.less
@@ -35,7 +35,7 @@
         .lucide {
             height:1.2rem;
             width: 1.2rem;
-            margin-right: 0.2rem;
+            margin-right: @variables_icon_margin;
         }
         .cp-modal {
             border-radius: @variables_radius_L;
