--- a/www/whiteboard/app-whiteboard.less
+++ b/www/whiteboard/app-whiteboard.less
@@ -87,7 +87,7 @@
 
         #cp-app-whiteboard-clear {
             svg {
-                margin-right: 0.2rem;
+                margin-right: @variables_icon_margin;
             }
             display: inline-flex;
             align-items: center;
