--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -70,7 +70,7 @@
         .lucide {
             width: 1.2em;
             height: 1.2em;
-            margin-right: 0.2rem;
+            margin-right: @variables_icon_margin;
         }
         .cp-checkmark {
             color: @cryptpad_text_col;
