render close icon

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -1440,6 +1440,9 @@
                     & > * {
                         margin-right: 10px;
                     }
+                    svg {
+                        margin: 0;
+                    }
                 }
             }
             .cp-radio {
